Fixed drawer icon alignment again

--- a/public_html/styles/navigation.less
+++ b/public_html/styles/navigation.less
@@ -492,6 +492,7 @@ li.cellRow.resetFilters {
 li.cellRow.contactItem a {
     .cellIcon svg {
         fill: white;
+        padding-top: 1px;
     }
     .cellIcon#contactIcon_snapchat {
         border: @lineThickness solid @colorLine;
